yaml/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: workload-type
                operator: In
                values:
                - backend
      containers:
      - name: backend
        image: 869935091451.dkr.ecr.ap-northeast-2.amazonaws.com/backend:241202-1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: mongodb-cert
          mountPath: /etc/ssl/certs/global-bundle.pem
          subPath: global-bundle.pem
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      volumes:
      - name: mongodb-cert
        secret:
          secretName: mongodb-secret
