yaml/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
  type: ClusterIP
